# verihogg-format

./: CMakeLists.txt  build.nix
formatter/include/: formatter.h
formatter/include/cli/: format_args.h
formatter/include/data/: format_style.h  format_token.h  lex_context.h  token_partition_tree.h  unwrapped_line.h
formatter/include/pipeline/: runner.h  token_annotator.h  tree_unwrapper.h
formatter/src/: formatter.cpp  main.cpp
formatter/src/data/: lex_context.cpp  unwrapped_line.cpp
formatter/src/pipeline/: format_args.cpp  printer.cpp  runner.cpp  tabular_aligner.cpp  token_annotator.cpp  tree_unwrapper.cpp
formatter/tests/: format_args_test.cpp  lex_context.cpp  test_tree_unwrapper.cpp
nix/: shared.nix
